# user-feedback-clustering

./: .env.example  .gitignore  CLAUDE.md  PRD — User Feedback Clustering 327f8d32c80881388c59d89ce067fa19.md  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/feedback_clustering/: cli.py  config.py  exceptions.py  models.py
src/feedback_clustering/clustering/: __init__.py  kmeans.py
src/feedback_clustering/embeddings/: __init__.py  cache.py  openai_embedder.py
src/feedback_clustering/ingestion/: __init__.py  csv_loader.py
src/feedback_clustering/labeling/: __init__.py  openai_labeler.py
src/feedback_clustering/output/: __init__.py  markdown_export.py
tests/: test_cli.py  test_clustering.py  test_embeddings.py  test_ingestion.py  test_labeling.py  test_output.py
tests/fixtures/: sample_crm.csv  sample_jira.csv  sources.yaml
